k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencloud
  namespace: opencloud
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: opencloud
  ports:
    - name: http
      port: 9200
      targetPort: http
      protocol: TCP
